<resources>
    <string name="app_name">SignUpForm</string>
    <string name="enter_password">Enter Password</string>
    <string name="save">save</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="password">Password</string>
    <string name="please_enter_email">Please Enter Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="email">Email</string>
    <string name="please_enter_name">Please Enter Name</string>
    <string name="name_enter">Enter Name</string>
    <string name="name">Name</string>
    <string name="cnf_pass">Please enter confirm password</string>
</resources>